# py-swig-demo

./: CMakeLists.txt  README.md  lib.cc  lib.hh  lib.i  memory.hh  test.py  test.sh
